--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -1,11 +1,16 @@
 <div>
   <label for="search">Search: </label>
-  <input id="search" type="text" [formControl]="search" />
+  <input
+    id="search"
+    type="text"
+    [formControl]="search"
+    (ngModelChange)="filterUsers()"
+  />
   <button (click)="openDialog()">add User</button>
 
-  <table mat-table [dataSource]="filteredUsers" class="mat-elevation-z8">
+  <table mat-table [dataSource]="filteredUser" class="mat-elevation-z8">
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef>No.</th>
+      <th mat-header-cell *matHeaderCellDef>Id</th>
       <td mat-cell *matCellDef="let element">{{ element.id }}</td>
     </ng-container>
 
